Fixing z-index prop in entire application

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@ nav {
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 2001;
+    z-index: 5;
 }
 
 .navBrand {
@@ -107,12 +107,12 @@ nav {
         left: -110%;
         transition: all 0.5s ease;
         background: #212529;
-        z-index: 15;
+        z-index: 1;
     }
     
     .navItems.active {
         left: 0;
-        z-index: 15;
+        z-index: 1;
         transition: all 0.5s ease;
     }
     
